# serializer version: 1
# name: test_all_entities[number.ha_gateway_hop_limit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 7,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 1,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.ha_gateway_hop_limit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Hop limit',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Hop limit',
    'platform': 'meshtastic',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'lora_hop_limit',
    'unique_id': '!2e9545b8_lora_hop_limit',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[number.ha_gateway_hop_limit-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HA Gateway Hop limit',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 7,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 1,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.ha_gateway_hop_limit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3.0',
  })
# ---
# name: test_all_entities[number.ha_gateway_node_info_interval-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 86400,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 3600,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 60,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.ha_gateway_node_info_interval',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Node info interval',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Node info interval',
    'platform': 'meshtastic',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'device_node_info_broadcast_secs',
    'unique_id': '!2e9545b8_device_node_info_broadcast_secs',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_all_entities[number.ha_gateway_node_info_interval-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'duration',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HA Gateway Node info interval',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 86400,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 3600,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 60,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.ha_gateway_node_info_interval',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10800.0',
  })
# ---
